<resources>
    <string name="app_name">Notas Compartidas</string>
    <string name="login_tv01">Notas Compartidas</string>
    <string name="login_tv02">Numero Telefonico</string>
    <string name="btnOk">Aceptar</string><string name="buscar">Buscar</string>
    <string name="guardar">Guardar</string>
    <string name="orden">Ordenar</string>
    <string name="nombre_card">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="aceptar">Aceptar</string>
    <string name="Vacio">Vacio</string>
    <string name="campoObligado">Campo obligatorio</string>
    <string name="editar">Editar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="erro_login">Usuario o contraseña incorrecta</string>
    <string name="logout">cerrar session</string>
    <string name="usuarios">Usuarios</string>
    <string name="btnok_smal">Ok</string>
    <string name="cancelar">Cancelar</string>
</resources>
